updated scrollytelling text

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
         <article>
           <div class="step" data-step="1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Seeing yourself in the media you consume is important to identity formation</p>
           </div>
           <div class="step" data-step="2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Racially mixed people are the largest growing demographic in America</p>
           </div>
           <div class="step" data-step="3">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Mixed Experiences often go unseen or misunderstood in media depictions</p>
           </div>
         </article>
 		<a class="arrow down-arrow-main" href="carousel-view-1.html"></a>
