--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 		</div>
 	</section>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-	<script src="script-scene.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
+	<script type="module" src="script-scene.js"></script>
 	<script src = "https://d3js.org/d3.v4.min.js"></script>
 	<!-- Would need to update the below code with correct observable notebook -->
-	<script type="module">
+	<!-- <script type="module">
 	import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
 	import define from "https://api.observablehq.com/d/735e998a24b40ae8@490.js?v=3";
 	new Runtime().module(define, name => {
 	  if (name === "disc") return new Inspector(document.querySelector("#observablehq-disc-5c772378"));
 	});
-	</script>
+	</script> -->
 </body>
 </html>
