rendered threeScene.js in right panel of index.html

--- a/bootstrap-testing/carousel-view-2.html
+++ b/bootstrap-testing/carousel-view-2.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="animated fadeIn">
 <head>
 	<title>To See/Be Seen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/node_modules/animate.css/animate.css">
     <!-- <link rel="stylesheet" type='text/css' href="://fonts.googleapis.com/css?family=Oswald&display=swap"> -->
 </head>
 <body>
@@ -13,36 +14,22 @@
 		<div class="row">
 			<div class="col-md-6 carousel-panel left-panel d-flex align-items-center">
 				<div class="text-container">
-					<h2>Experiential View</h2>
-                    <h4>Each 3D form is made up of 30 discs.</h4>
-                    <h4>Each disc represents one year of media. </h4>
-                    <h4>Each disc contains three concentric circles.</h4>
-                    <div class="circle-container">
-                        <svg width="100" height="100">
-                          <circle cx="50" cy="50" r="10" fill="#333" />
-                        </svg>
-                        <p>Multiracial Narratives </p>
-                        <svg width="100" height="100">
-                            <circle cx="50" cy="50" r="20" fill="plum" />
-                        </svg>
-                        <p>Other Marginalized Narratives</p>
-                        <svg width="100" height="100">
-                            <circle cx="50" cy="50" r="40" fill="whitesmoke" stroke="#333" stroke-width=".25px"/>
-                        </svg>
-                        <p>White Narratives</p>
-                    </div>
+					<h2>Changes Over Time</h2>
+                    <h4>See the how representation in the media has changed over the last 30 years in the United States.</h4>
+                    <h4>Hover over a disc to discover more about the breakdown of experiences in the media from that year. </h4>
+                    <h4>Click on a disc to see more about that year in detail.</h4>
 				</div>
 			</div>
 			<div class="col-md-6 carousel-panel right-panel">
-				<div id="three-container"></div>
+				<!-- <canvas id="canvas"></canvas> -->
 			</div>
-            <a class="arrow down-arrow-main" href="carousel-view-2.html"></a>
-			<!-- <a class="arrow up-arrow" href="#scrollytelling"></a> -->
+            <a class="arrow down-arrow-main" href="carousel-view-3.html"></a>
+			<a class="arrow up-arrow" href="index.html"></a>
 		</div>
 	</div>
 
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
-	<script type="module" src="threeScene.js"></script>
+	<!-- <script type="module" src="threeScene.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
