--- a/bootstrap-testing/carousel-view-3.html
+++ b/bootstrap-testing/carousel-view-3.html
@@ -13,11 +13,9 @@
 		<div class="row">
 			<div class="col-md-6 carousel-panel left-panel d-flex align-items-center">
 				<div class="text-container">
-					<h2>Experiential View</h2>
-                    <h4>Each 3D form is made up of 30 discs.</h4>
-                    <h4>Each disc represents one year of media. </h4>
-                    <h4>Each disc contains three concentric circles.</h4>
-                    <div class="circle-container">
+					<h2>One Year in Detail</h2>
+                    <h4>Click on a card for more information</h4>
+                    <div class="card-container">
                         <svg width="100" height="100">
                           <circle cx="50" cy="50" r="10" fill="#333" />
                         </svg>
@@ -34,15 +32,15 @@
 				</div>
 			</div>
 			<div class="col-md-6 carousel-panel right-panel">
-				<div id="three-container"></div>
+				<!-- <canvas id="canvas"></canvas> -->
 			</div>
-            <a class="arrow down-arrow-main" href="carousel-view-2.html"></a>
-			<!-- <a class="arrow up-arrow" href="#scrollytelling"></a> -->
+            <a class="arrow down-arrow-main" href="carousel-view-4.html"></a>
+			<a class="arrow up-arrow" href="carousel-view-2.html"></a>
 		</div>
 	</div>
 
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
-	<script type="module" src="threeScene.js"></script>
+	<!-- <script type="module" src="threeScene.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
