updated with presentation draft 4

--- a/p5_testing/circle-animation/index.html
+++ b/p5_testing/circle-animation/index.html
@@ -8,6 +8,10 @@
 
   </head>
   <body>
+    <!-- <div id="quote1">
+      <h2>“...to be part of the whole but outside the main body” - bell hooks</h2>
+    </div> -->
+
     <script src="sketch.js"></script>
   </body>
 </html>
