--- a/p5_testing/metaballs/index.html
+++ b/p5_testing/metaballs/index.html
@@ -8,6 +8,12 @@
 
   </head>
   <body>
+    <!-- <div id="quote-2">
+      <h2>“...the reality of what it means to be taught in a culture of domination by those who dominate.” - bell hooks</h2>
+    </div> -->
+    
+    <div id="p5-container"> 
     <script src="sketch.js"></script>
+    </div>
   </body>
 </html>
