file restructuring, and updated CSS

--- a/bootstrap-testing/index.html
+++ b/bootstrap-testing/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
 	<title>To See/Be Seen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" type='text/css' href="://fonts.googleapis.com/css?family=Oswald&display=swap"> -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/css/bootstrap.min.css"> -->
+  <!-- <link rel="stylesheet" type='text/css' href="://fonts.googleapis.com/css?family=Oswald&display=swap"> -->
 </head>
 <body>
 	<div class="container-fluid p-0">
 		<div class="row">
 			<div class="col-md-6 carousel-panel left-panel d-flex align-items-center">
 				<div class="text-container">
-					<h2>Experiential View</h2>
-                    <h4>Each 3D form is made up of 30 discs.</h4>
-                    <h4>Each disc represents one year of media. </h4>
-                    <h4>Each disc contains three concentric circles.</h4>
-                    <div class="circle-container">
-                        <svg width="100" height="100">
+					<h2>Experiential View</h2><br>
+          <h4>Each 3D form is made up of 30 discs.</h4><br>
+          <h4>Each disc represents one year of media. </h4><br>
+          <h4>Each disc contains three concentric circles.</h4><br><br><br><br><br><br>
+          <div class="circle-container">
+            <div class="dot1">
+              <span class="dotblack"></span>
+              <p>Mixed</p>
+            </div>  
+            <div class="dot2">
+              <span class="dotplum"></span>
+              <p>All Marginalized</p>
+            </div> 
+            <div class="dot3">
+              <span class="dotwhite"></span>
+              <p>White</p>
+            </div>   
+                        <!-- <svg width="100" height="100">
                           <circle cx="50" cy="50" r="10" fill="#333" />
                         </svg>
                         <p>Multiracial Narratives </p>
@@ -29,8 +43,8 @@
                         <svg width="100" height="100">
                             <circle cx="50" cy="50" r="40" fill="whitesmoke" stroke="#333" stroke-width=".25px"/>
                         </svg>
-                        <p>White Narratives</p>
-                    </div>
+                        <p>White Narratives</p> -->
+          </div>
 				</div>
 			</div>
 			<div class="col-md-6 carousel-panel right-panel">
@@ -55,16 +69,15 @@
         </div>
     </div>
 
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
-	<script type="module" src="threeScene.js"></script>
-    <script type="module" src="script.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
+	<script type="module" src="js/threeScene.js"></script>
+  <script type="module" src="js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
 	<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
 </body>
 </html>
