--- a/bootstrap-testing/carousel-view-2.html
+++ b/bootstrap-testing/carousel-view-2.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" class="animated fadeIn">
 <head>
+	<meta charset="UTF-8">
 	<title>To See/Be Seen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/carousel-view-2-style.css">
+	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/node_modules/animate.css/animate.css">
+    <!-- <link rel="stylesheet" href="/node_modules/animate.css/animate.css"> -->
     <!-- <link rel="stylesheet" type='text/css' href="://fonts.googleapis.com/css?family=Oswald&display=swap"> -->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/css/bootstrap.min.css"> -->
 </head>
 <body>
 	<div class="container-fluid p-0">
@@ -18,6 +20,7 @@
                     <h4>See the how representation in the media has changed over the last 30 years in the United States.</h4>
                     <h4>Hover over a disc to discover more about the breakdown of experiences in the media from that year. </h4>
                     <h4>Click on a disc to see more about that year in detail.</h4>
+					
 				</div>
 			</div>
 			<div class="col-md-6 carousel-panel right-panel">
@@ -29,13 +32,29 @@
 			<a class="arrow up-arrow" href="index.html"></a>
 		</div>
 	</div>
+    <div id="popup-message" class="modal d-none">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Window Too Small!</h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <p>This project is best viewed on a desktop or larger window.</p>
+            </div>
+          </div>
+        </div>
+    </div>
 
+	<script type="module" src="js/script.js"></script>
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
 	<!-- <script type="module" src="threeScene.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
+
+
 </body>
 </html>
