--- a/bootstrap-testing/carousel-view-3.html
+++ b/bootstrap-testing/carousel-view-3.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
 	<title>To See/Be Seen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/carousel-view-3-style.css">
+	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" type='text/css' href="://fonts.googleapis.com/css?family=Oswald&display=swap"> -->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/css/bootstrap.min.css"> -->
 </head>
 <body>
 	<div class="container-fluid p-0">
@@ -15,20 +17,13 @@
 				<div class="text-container">
 					<h2>One Year in Detail</h2>
                     <h4>Click on a card for more information</h4>
-                    <div class="card-container">
-                        <svg width="100" height="100">
-                          <circle cx="50" cy="50" r="10" fill="#333" />
-                        </svg>
-                        <p>Multiracial Narratives </p>
-                        <svg width="100" height="100">
-                            <circle cx="50" cy="50" r="20" fill="plum" />
-                        </svg>
-                        <p>Other Marginalized Narratives</p>
-                        <svg width="100" height="100">
-                            <circle cx="50" cy="50" r="40" fill="whitesmoke" stroke="#333" stroke-width=".25px"/>
-                        </svg>
-                        <p>White Narratives</p>
-                    </div>
+                   
+						<div class="buttons">
+							<div class="gray">
+								<button><a href="#" target="_self">TV Show 1</a></button>
+							</div>
+						</div>
+                
 				</div>
 			</div>
 			<div class="col-md-6 carousel-panel right-panel">
@@ -40,7 +35,21 @@
 			<a class="arrow up-arrow" href="carousel-view-2.html"></a>
 		</div>
 	</div>
-
+	<div id="popup-message" class="modal d-none">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Window Too Small!</h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <p>This project is best viewed on a desktop or larger window.</p>
+            </div>
+          </div>
+        </div>
+    </div>
+	
+	<script type="module" src="js/script.js"></script>
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
 	<!-- <script type="module" src="threeScene.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
