--- a/bootstrap-testing/index.html
+++ b/bootstrap-testing/index.html
@@ -11,6 +11,18 @@
   <!-- <link rel="stylesheet" type='text/css' href="://fonts.googleapis.com/css?family=Oswald&display=swap"> -->
 </head>
 <body>
+  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://unpkg.com/three/build/three.module.js",
+        "three/addons/": "https://unpkg.com/three/examples/jsm/"
+      }
+    }
+  </script>
+  <script type="module" src="threeScene.js"></script>
+
 	<div class="container-fluid p-0">
 		<div class="row">
 			<div class="col-md-6 carousel-panel left-panel d-flex align-items-center">
